assets/css/styles.css
@font-face {
  font-family: "TT Commons Regular";
  src: url("TTCommons-Regular.ttf");
  src: url("TTCommons-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "TT Commons Medium";
  src: url("TTCommons-Medium.ttf");
  src: url("TTCommons-Medium.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "TT Commons DemiBold";
  src: url("TTCommons-DemiBold.ttf");
  src: url("TTCommons-DemiBold.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

.navbar-item > img {
  max-height: 2.75rem;
  margin-top: -7px;
  margin-left: 2rem;
  border: 1px solid red;
}

.navbar-item {
  font-size: 1.25rem;
  font-family: "TT Commons Medium";
  color: hsl(221, 93%, 16%);
}

.logo {
  background-image: url("./../images/shopcast-redesign-small.svg");
  width: 134px;
  height: 47px;
  background-size: 134px 47px;
  margin-top: -6px;
  margin-right: 1rem;
  margin-left: 2vw;
}

.navbar {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.navbar-btn {
  background-color: #0073ec;
  min-width: unset;
  margin-top: -10px;
  height: 40px;
  text-align: center;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border-radius: 4px;
  padding: 16px 18px 18px;
  color: #fff;
  line-height: 12px;
  letter-spacing: 0.25px;
  font-size: 1rem;
}

.navbar-btn:hover {
  color: #fff;
  background-color: #0162cc;
}

.background-1 {
  background-image: url("../images/edge-4.svg");
  filter: hue-rotate(-6deg) opacity(0.9);
  width: 100%;
  min-height: 90vh;
  height: 90vh;
  background-position: center bottom;
  background-size: cover;
  background-repeat: no-repeat;
}

.background-2 {
  background-image: url("../images/edge-6.svg");
  filter: hue-rotate(0deg) opacity(0.9);
  width: 100%;

  background-position: center bottom;
  background-size: cover;
  background-repeat: no-repeat;
}

.below-hero {
  background-image: url("./../images/gray-right.svg");
  width: 100%;
  min-height: 150px;
  background-position: center top;
  background-size: cover;
  background-repeat: no-repeat;
}

.hero-title {
  color: #1A237E;
  font-family: "TT Commons DemiBold";
  letter-spacing: 0.25px;
  font-size: 4rem;
  line-height: normal;
  margin-top: 8rem;
}

.hero-subtitle {
  color: #1A237E;
  font-family: "TT Commons Regular";
  font-size: 2rem;
}

.hero-card-img {
  background-image: url("../images/hero-1.png");
  width: 580px;
  height: 272px;
  background-size: 580px 420px;
  background-position: 0px -120px;
  margin-bottom: 2rem;
}

.hero-card {
  background: #fff;
  padding: 2rem;
  box-shadow: 0 4px 30px rgba(11, 33, 74, 0.11),
    0 -2px 5px rgba(11, 33, 74, 0.03);
  border-radius: 4px;
}

.hero-card-title {
  font-family: "TT Commons Medium";
  color: #0b214a;
  font-size: 24px;
  font-weight: 500;
  line-height: 28px;
  letter-spacing: 0;
  margin-bottom: 1rem;
}

.hero-card-subtitle {
  font-family: "TT Commons Regular";
  color: #90a0ac;
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: -0.25px;
  margin-bottom: 2rem;
}

.arrow-link {
  color: #2496ed;
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  letter-spacing: -0.25px;
  transition: all 0.3s ease;
}

.blue-shadow {
  box-shadow: 0 4px 30px #0080f723,
    0 -2px 5px #0080f707;
}

.arrow-link:hover {
  color: #0162cc;
  border-bottom: 1px solid #0162cc;
}

.is-horizontal-center {
  justify-content: center;
}

.medium {
  font-family: "TT Commons Medium";
}

.demibold {
  font-family: "TT Commons DemiBold";
}

h2,
h3,
h4 {
  color: #0b214a;
  letter-spacing: -0.5px;
  margin-bottom: 0.5rem;
}

.box > p {
  font-weight: 400;
  line-height: 36px;
  letter-spacing: -0.5px;
  color: #90a0ac;
  margin-bottom: 1.5rem;
}

.card-subtitle {
  color: #0b214a;
  font-size: 24px;
  font-weight: 500;
  line-height: 28px;
  letter-spacing: 0;
}

.section-1 {
  margin-bottom: 3rem;
}

.section-3 {
  background-color: #e9ebee;
  opacity: 0.7;
}

.gutterTop {
  margin-top: 6rem;
}

.gutterBottom {
  padding-bottom: 8rem;
}

.footer-title {
  color: #0b214a;
  font-size: 3.5rem;
  font-weight: 600;
  line-height: 72px;
  letter-spacing: -0.25px;
}

.footer {
  background-color: #11164b;
}

body {
  font-family: "TT Commons Regular";
}

p {
  font-size: 17px;
  font-weight: 400;
  color: #90a0ac;
  line-height: 22px;
  letter-spacing: 0;
}

.button-lg {
  box-shadow: none;
  background-image: unset;
  text-align: center;
  border: 2px solid #0073ec;
  box-sizing: border-box;
  border-radius: 4px;
  height: 54px;
  min-width: 196px;
  padding: 16px 18px 18px;
  background-color: #0073ec;
  font-size: 17px;
  color: #fff;
  line-height: 20px;
  letter-spacing: 0.25px;
  letter-spacing: -0.25px;
  position: relative;
  display: inline-block;
  font-family: "TT Commons Medium";
  transition: all 0.3s ease;
}

.button-lg:hover {
  border: 2px solid #0162cc;
  background-color: #0162cc;
  color: #fff;
  text-decoration: none;
}

.t1 {
  background-color: #fff;
  width: 48px;
  height: 48px;
}

.footer-subtitle {
  color: #fff;
  font-family: "TT Commons DemiBold";
  margin-top: 1rem;
  margin-bottom: 1rem;
  display: block;
  letter-spacing: 0.25px;
}

.footer-subtitle:hover {
  color: #fff;
  text-decoration: underline;
}

.footer-link {
  margin-bottom: 0.5rem;
  display: block;
  color: #C5CAE9;
}

.footer-link:hover {
  color: #C5CAE9;
  text-decoration: underline;
}

.logo-light-sm {
  background-image: url("./../images/shopcast-light.svg");
  width: 134px;
  height: 47px;
  background-size: 134px 47px;
  margin-top: 0px;
}

.mobile-hide {

}

.grid-box {
  padding: 3rem;
}

.image-shadow {
  filter: drop-shadow(2px 2px 8px rgba(60, 60, 65, 0.123));
}

.grid-subtitle {
  line-height: 1.75rem;
}

img {
  user-select: none;
  pointer-events: none;
}

.page-title {
  color: #0b214a;
  font-weight: 600;
  line-height: 72px;
  letter-spacing: -.25px;
}

.pricing-card-1 {
  border-top: 4px solid #b3e895;
  border-radius: 0px;
}

.pricing-card-2 {
  border-top: 4px solid #78e46e;
  border-radius: 0px;
}

.pricing-card-3 {
  border-top: 4px solid #4dc076;
  border-radius: 0px;
}

.pricing-list-item {
  margin-top: 2px;
  margin-left: 0.35rem;
}

.d {
  border: 1px solid red;
}

@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
  .hero-title {
    font-family: "TT Commons DemiBold";
    letter-spacing: 0.25px;
    font-size: 1rem;
    margin-top: -0.5rem;
    line-height: 1;
  }

  .hero-subtitle {
    font-family: "TT Commons Regular";
    font-size: 1.35rem;
    line-height: 1;
  }

  .mobile-hide {
    display: none;
  }

  .box {
    background: #fff;
    padding: 2rem;
    box-shadow: none;
    border-radius: 4px;
  }
}

/* iPhone X, XS, 11 Pro */
@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 812px)
  and (-webkit-min-device-pixel-ratio: 3) {
    .hero-title {
      font-family: "TT Commons DemiBold";
      letter-spacing: 0.25px;
      font-size: 3rem;
      margin-top: 3rem;
    }

    .hero-card-title {
      font-size: 1.35rem;
    }
  
    .hero-subtitle {
      font-family: "TT Commons Regular";
      font-size: 1.5rem;
      line-height: 1.75rem;
      margin-top: 1rem;
      margin-bottom: 1rem;
    }
  
    .mobile-hide {
      display: none;
    }

    .box {
      background: #fff;
      padding: 2rem;
      box-shadow: none;
      border-radius: 4px;
    }

    .grid-box {
      padding: 1rem;
    }

    .gutterTop {
      margin-top: 1rem;
    }

    .gutterBottom {
      padding-bottom: 4rem;
    }

    .footer-title {
      font-size: 2.5rem;
      line-height: 48px;
      letter-spacing: -2px;
      margin-top: 4rem;
    }

    .grid-subtitle {
      line-height: 1.75rem;
    }

    .logo-light-sm {
      margin-left: -7px;
    }
}

/* iPhone XS Max, 11 Pro Max */
@media only screen
  and (min-device-width: 414px)
  and (max-device-width: 896px)
  and (-webkit-min-device-pixel-ratio: 3) {

}

/* iPhone XR, 11 */
@media only screen
  and (min-device-width: 414px)
  and (max-device-width: 896px)
  and (-webkit-min-device-pixel-ratio: 2) {
    .hero-title {
      font-family: "TT Commons DemiBold";
      letter-spacing: 0.25px;
      font-size: 3rem;
      margin-top: 3rem;
    }

    .hero-card-title {
      font-size: 1.35rem;
    }
  
    .hero-subtitle {
      font-family: "TT Commons Regular";
      font-size: 1.5rem;
      line-height: 1.75rem;
      margin-top: 1rem;
      margin-bottom: 1rem;
    }
  
    .mobile-hide {
      display: none;
    }

    .box {
      background: #fff;
      padding: 2rem;
      box-shadow: none;
      border-radius: 4px;
    }

    .grid-box {
      padding: 1rem;
    }

    .gutterTop {
      margin-top: 1rem;
    }

    .gutterBottom {
      padding-bottom: 4rem;
    }

    .footer-title {
      font-size: 2.5rem;
      line-height: 48px;
      letter-spacing: -2px;
      margin-top: 4rem;
    }

    .grid-subtitle {
      line-height: 1.75rem;
    }

    .logo-light-sm {
      margin-left: -7px;
    }
}

/* iPhone 6, 6S, 7, 8 */
@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (-webkit-min-device-pixel-ratio: 2) {

}

/* iPhone 6 Plus, 6S Plus, 7 Plus, 8 Plus */
@media only screen
  and (min-device-width: 414px)
  and (max-device-width: 736px)
  and (-webkit-min-device-pixel-ratio: 3) {
    .hero-title {
      font-family: "TT Commons DemiBold";
      letter-spacing: 0.25px;
      font-size: 2.75rem;
      margin-top: 0.5rem;
      line-height: 1;
    }
  
    .hero-subtitle {
      font-family: "TT Commons Regular";
      font-size: 1.25rem;
      line-height: 1.25;
      margin-top: 0rem;
      margin-bottom: 0rem;
    }
  
    .mobile-hide {
      display: none;
    }

    .box {
      background: #fff;
      padding: 2rem;
      box-shadow: none;
      border-radius: 4px;
    }
}
/* iPad in portrait */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) { 
  .hero-title {
    font-family: "TT Commons DemiBold";
    letter-spacing: 0.25px;
    font-size: 3rem;
    line-height: 1;
    margin-top: 15vh;
  }

  .hero-subtitle {
    font-family: "TT Commons Regular";
    font-size: 1.5rem;
    line-height: 1;
    margin-top: 1rem;
    margin-bottom: 1rem;
  }

  .mobile-hide {
    display: block;
  }
} 

